# sii2019

./: README.md
charge_robot/: CMakeLists.txt  package.xml
charge_robot/launch/: demo.launch  parseimage.launch  parseimage.launch~
charge_robot/models/car1/: model.config  model.sdf
charge_robot/models/car2/: model.config  model.sdf
charge_robot/models/car3/: model.config  model.sdf
charge_robot/models/car4/: model.config  model.sdf
charge_robot/models/car5/: model.config  model.sdf
charge_robot/models/car6/: model.config  model.sdf
charge_robot/models/car7/: model.config  model.sdf
charge_robot/models/charge_oncar/: model.config  model.sdf
charge_robot/models/charge_oncar/meshes/: charge_oncar.dae
charge_robot/models/hang/: model.config  model.sdf
charge_robot/scripts/: .cproject  .project  autogo.py  autogo.py~  cnndetector.py  cnndetector.py~
charge_robot/worlds/: parking_robot_done.world
templatematching/: CMakeLists.txt  package.xml
templatematching/cfg/: matchingparam.cfg  matchingparam.cfg~
templatematching/data/: 1.pcd  2.pcd
templatematching/src/: correspondence_grouping.cpp
