<package format="2">
  <name>charge_robot</name>
  <version>0.0.1</version>
  <description>
  EV charging robot
  </description>
  <maintainer email="cxy_rampage@pku.edu.cn">Xiangyu Chen</maintainer>
  <maintainer email="xlwyes@pku.edu.cn">liangwei xu</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>

  <exec_depend>car_demo</exec_depend>
  <exec_depend>fake_localization</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>templatematching</exec_depend>
  <exec_depend>realsense_gazebo_plugin</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
